--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,29 +5,31 @@ on:
     - cron: "*/10 * * * *"
   workflow_dispatch:
 
+permissions:
+  contents: write   # 🔑 VERY IMPORTANT
+
 jobs:
   sync:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout (no history)
+      - name: Checkout repo
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 1
 
       - name: Download Google Sheet as CSV
         run: |
           curl -L "https://docs.google.com/spreadsheets/d/1sWFK8XP0iXAO7nwfbJ3YQ_HnfDkvHhIcCf2RvQ9lbc0/export?format=csv" -o output.csv
 
-      - name: Publish raw file (force clean)
+      - name: Commit and push if changed
         run: |
           git config user.name "github-actions"
           git config user.email "actions@github.com"
 
-          git checkout --orphan temp_branch
-          git rm -rf .
           git add output.csv
-          git commit -m "Auto sync from Google Sheet"
 
-          git branch -M main
-          git push -f origin main
+          if git diff --cached --quiet; then
+            echo "No changes"
+          else
+            git commit -m "Auto update from Google Sheet"
+            git push
+          fi
